2005-08-03  H.J. Lu  <hongjiu.lu@intel.com>

	* elfxx-ia64.c (elfNN_ia64_relax_section): Resize .rela.got
	only if it isn't NULL.

2005-08-03  H.J. Lu  <hongjiu.lu@intel.com>

	* elf32-i386.c (elf_howto_table): Undo the overflow change for
	R_386_PC16 made on 2005-07-18.

	* elf64-x86-64.c (x86_64_elf_howto_table): Undo the overflow
	change for R_X86_64_PC16 made on 2005-07-18.

2005-08-03  Alan Modra  <amodra@bigpond.net.au>

	* elf32-ppc.c (struct ppc_elf_link_hash_table): Remove hgot.  Use
	elf.hgot throughout file.

2005-08-03  Alan Modra  <amodra@bigpond.net.au>

	* elf32-ppc.c (ppc_elf_size_dynamic_sections): Correct value of
	_GLOBAL_OFFSET_TABLE_ for > 32k GOT.

2005-08-02  Andreas Schwab  <schwab@suse.de>

	* elfxx-ia64.c (struct elfNN_ia64_allocate_data): Add only_got.
	(elfNN_ia64_relax_section): Reallocate .rela.got when .got has
	changed.
	(allocate_dynrel_entries): Look only at GOT relocations when
	only_got is true.
	(elfNN_ia64_size_dynamic_sections): Set only_got to false before
	calling allocate_dynrel_entries.

2005-08-02  Nick Clifton  <nickc@redhat.com>

	PR 1147
	* elf32-arm.c (struct _arm_elf_section_data): Turn into a typedef
	and make the mapcount field unsigned.
	(struct section_list): New: Used to keep track of which sections
	have an _arm_elf_section_data structure.
	(record_section_with_arm_elf_section_data): New function.
	(get_arm_elf_section_data): New function.
	(unrecord_section_with_arm_elf_section_data): New function.
	(elf32_arm_output_symbol_hook): Use get_arm_elf_section_data.
	(elf32_arm_new_section_hook): Call
	record_section_with_arm_elf_section_data.
	(elf32_arm_write_section): Use get_arm_elf_section_data and
	unrecord_section_with_arm_elf_section_data.

2005-08-01  Richard Sandiford  <richard@codesourcery.com>

	* elfxx-mips.c (mips_mach_extends_p): Treat MIPS64 as an extension
	of MIPS32 and MIPS64r2 as an extension of MIPS32r2.

2005-07-30  David Daney  <ddaney@avtrex.com>
